# kaggle

./: TODO.markdown  pyproject.toml
titanic/: Titanic_Exploration.ipynb  Titanic_streamlined.ipynb  utils.py
