[tool.poetry]
name = "kaggle"
version = "0.1.0"
description = "kaggle stuff"
authors = ["Eric Fulmer <eric.r.fulmer@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
numpy = "^1.18.5"
pandas = "^1.0.4"
pyarrow = "^0.17.1"
scikit-learn = "^0.23.1"
jupyterlab = "^2.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
